-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/macroAssembler_x86.cpp:891
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhallaL/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:891), pid=8850, tid=8880
# assert(false) failed: DEBUG MESSAGE: null oop passed to encode_heap_oop_not_null2
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.8850)
#
# An error report file with more information is saved as:
# /oracle/valhallaL/open/JTwork/scratch/hs_err_pid8850.log
Locks owned:
Mutex: [0x00007f407c015460/0x0000000000000001] tty_lock - owner: 0x00007f407c4a0800
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
# after -XX: or in .hotspotrc: SuppressErrorAt=/macroAssembler_x86.cpp:891
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhallaL/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:891), pid=8850, tid=8880
# assert(false) failed: DEBUG MESSAGE: null oop passed to encode_heap_oop_not_null2
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.8850)
#
# An error report file with more information is saved as:
# /oracle/valhallaL/open/JTwork/scratch/hs_err_pid8850.log
Locks owned:
Mutex: [0x00007f407c015460/0x0000000000000001] tty_lock - owner: 0x00007f407c4a0800
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#