8204954: [lworld] FlattenableSemanticTest crashes with assert(false) failed: DEBUG MESSAGE: null oop passed to encode_heap_oop_not_null2